--- a/BUILD.gn
+++ b/BUILD.gn
@@ -35,6 +35,7 @@ if (!is_ios) {
   group("browser_dependencies") {
     deps = [
       "//brave/browser",
+      "//brave/components/resources:about_credits",
       "common",
       "chromium_src:browser",
     ]
