--- a/components/brave_rewards/browser/BUILD.gn
+++ b/components/brave_rewards/browser/BUILD.gn
@@ -27,6 +27,11 @@ source_set("browser") {
     "rewards_service_observer.h",
     "wallet_properties.cc",
     "wallet_properties.h",
+    "file_util.cc",
+    "file_util.h",
+    "logging_util.cc",
+    "logging_util.h",
+    "logging.h",
     "promotion.cc",
     "promotion.h",
     "pending_contribution.cc",
