Fix 3650: Enable google sign in for extensions

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -94,6 +94,8 @@ source_set("ui") {
       "webui/settings/brave_import_data_handler.h",
       "webui/settings/brave_privacy_handler.cc",
       "webui/settings/brave_privacy_handler.h",
+      "webui/settings/brave_social_blocking_handler.cc",
+      "webui/settings/brave_social_blocking_handler.h",
       "webui/settings/default_brave_shields_handler.cc",
       "webui/settings/default_brave_shields_handler.h",
     ]
